Fixed Animation on Mobile BG Fade-In

--- a/css/header.css
+++ b/css/header.css
@@ -1,5 +1,12 @@
 /* Header Style */
 
+/*  Keyframes  */
+@keyframes fadeInMobileBG {
+	100% {
+		opacity: 1;
+	}
+}
+
 /* Header Elements, Ids and Classes */
 #header {
 	width: 100%;
@@ -128,12 +135,13 @@
 }
 #create-mobile-bg {
 	width: 160%;
-	opacity: 1;
+	opacity: 0;
 	position: absolute;
 	top: 0;
 	left: 0;
 	transition: 1s ease-in;
 	z-index: 1;
+	animation: fadeInMobileBG 1s 3s linear forwards;
 }
 .reveal-left,
 .reveal-right {
